--- a/00-Q2-CS2B-ASI-May-2023/Q2_Question_1.Rmd
+++ b/00-Q2-CS2B-ASI-May-2023/Q2_Question_1.Rmd
@@ -74,8 +74,12 @@ xi) Compare the result in part (ix) and part (x) and give a suitable explanation
 Solution 1:
 
 ```{r}
-Corn_Prices<-read.csv("D:\\Monthly_corn.csv")
-(i) Close<-ts(Corn_Prices$Close,start = c(2017,1),frequency=12)
+Corn_Prices<-read.csv("Monthly_Corn.csv")
+```
+
+```{r}
+
+Close<-ts(Corn_Prices$Close,start = c(2017,1),frequency=12)
 ```
 
 ```{r}
@@ -97,13 +101,18 @@ tween 2017 to 2020, it appeared to be stationary.
 
 ### Part D
 
-(iv) acf(Close, main = "ACF", xlab = "Lags", ylab = "Serial Correlation", la
-g.max=60)
 
+```{r eval=FALSE}
+acf(Close, main = "ACF", xlab = "Lags", 
+    ylab = "Serial Correlation", lag.max=60)
 
-```{r}
-pacf(Close, main = "PACF", xlab = "Lags", ylab = "Serial Correlation", lag.ma
-x=60)
+```
+
+---
+
+```{r echo=FALSE}
+pacf(Close, main = "PACF", xlab = "Lags", 
+     ylab = "Serial Correlation", lag.max=60)
 ```
 
 
@@ -135,28 +144,27 @@ acf(returns, main = "ACF", xlab = "Lags", ylab = "Serial Correlation",
 lag.max=60)
 ```
 
-[1 for the plot, 0.5 for proper labeling of title and axes]
 
 ```{r}
-pacf(returns, main = "PACF", xlab = "Lags", ylab = "Serial Correlation", lag.
-max=60)
+pacf(returns, main = "PACF", xlab = "Lags", ylab = "Serial Correlation", lag.max=60)
 ```
 
 ---
 
-(viii) The monthly returns appear stationary. If a series is stationary, the A
+(viii) 
+
+* The monthly returns appear stationary. If a series is stationary, the A
 CF should decay to zero quickly and should not display any oscillation.
  
 ---
 
 (ix) The most appropriate ARMA will be ARMA (0,0) as the ACF and PACF do not 
 show significance at any of the lags 
-(x) library(forecast)
-## Warning: package 'forecast' was built under R version 4.0.5
-## Registered S3 method overwritten by 'quantmod':
-## method from
-## as.zoo.data.frame zoo
+(x) 
 
+```{r}
+library(forecast)
+```
 
 
 ---
@@ -171,6 +179,7 @@ m4<-arima(returns,order = c(1,0,1))
 
 ---
 
+```{r}
 m1$aic
 ##  -164.6838
 m2$aic
@@ -179,9 +188,11 @@ m3$aic
 ##  -163.3079
 m4$aic
 ##  -165.2896
+```
 
 --- 
 
+```{r}
 auto.arima(returns)
 ## Series: returns 
 ## ARIMA(0,0,0)(1,0,0)[12] with zero mean 
@@ -194,13 +205,12 @@ auto.arima(returns)
 ## sigma^2 estimated as 0.005687: log likelihood=86.37
 ## AIC=-168.74 AICc=-168.58 BIC=-164.14
 # ARMA (1,1) has the lowest AIC.
-[0.5 for fitting each of the four models, 2 for identifying the best model]
+```
 
 ---
 
 (xi) The deviation is observed because seasonality is not considered in the 
-model. ACF is actually demonstrating a small significant serial correlation a
-t lag 12, which might give rise to seasonal ARMA. 
+model. ACF is actually demonstrating a small significant serial correlation at lag 12, which might give rise to seasonal ARMA. 
 # If we are forcefully fitting non seasonal models to a seasonal data, the di
 screpancy is possible.
  [1 mark for each valid observation, Max 2]
