--- a/00-R1-CS1B-FIA-Sep-2023/R1-Question-4.Rmd
+++ b/00-R1-CS1B-FIA-Sep-2023/R1-Question-4.Rmd
@@ -54,16 +54,20 @@ test above and a normal approximation.
 (c) Comment on your results to parts (i)(a) and (i)(b). 
 ---
 
-(ii) Calculate the exact probability, to four decimal places, of not rejecting the
+B. Calculate the exact probability, to four decimal places, of not rejecting the
 hypothesis of the coin being fair when the actual probability of heads is equal
 to 0.7. 
-(iii) Calculate the power of the test, to four decimal places, for the probability of
-heads taking values from 0.1 to 0.9 with a 0.01 step. You are not required to
+
+C.  Calculate the power of the test, to four decimal places, for the probability of
+heads taking values from 0.1 to 0.9 with a 0.01 step. 
+
+You are not required to
 print the results. 
 [Hint: you might find the <tt>seq()</tt> command useful.]
-(iv) Plot the power of the test against the probability of heads values in part (iii).
 
-(v) Comment on the plot in part (iv). 
+D. Plot the power of the test against the probability of heads values in part C.
+
+E. Comment on the plot in part D. 
 
 ---
 
@@ -85,7 +89,7 @@ round(1 - pbinom(115,200,0.5) + pbinom(84,200,0.5),2)
 ---
 
 ### Part 
-As the sample size 𝑛𝑛 is large, the binomial distribution can be approximated by the normal distribution with mean 𝑛𝑛𝑛𝑛 and variance 𝑛𝑛𝑛𝑛(1−𝑝 ) using CLT. 
+As the sample size n is large, the binomial distribution can be approximated by the normal distribution with mean np and variance np(1−p ) using CLT. 
 Applying continuity correction, the probability of rejecting the hypothesis of fair
 coin when it is actually correct, is calculated as:
 
@@ -122,19 +126,25 @@ pow = round(1 - (pbinom(115, 200, p) - pbinom(84, 200, p)),4)
 
 ---
 
-### Part 
-(iv)
+### Part D
+
 
 ```{r}
-plot(p,pow, type="l", ylab = "Power of test", xlab = "probability", main="Power of test") 
+plot(p,pow, type="l", ylab = "Power of test", 
+     xlab = "probability", main="Power of test") 
 
 ```
 
 ---
 
-### Part  (v)
+### Part E
 
 * The power of the test increases as we get away from the fair coin probability. 
 * This is consistent with the definition of the power of a test since the ability to reject
 the null hypothesis of coin being fair should be higher when the hypothesis should
 be rejected. 
+
+---
+
+
+---
