--- a/00-S1-CS1B-ASI-Nov-2023/S1-Question-4.Rmd
+++ b/00-S1-CS1B-ASI-Nov-2023/S1-Question-4.Rmd
@@ -82,10 +82,9 @@ d) Var[m(θ)]
 (3)
 e) Z
 (2)
-IAI CS1B-1123
-Page 6 of 6
+
 ii) Using part (i), calculate the expected claim number for Go and Clear.
-(3)
+
 iii) What additional information is required to use EBCT Model 2.
 
 ---
@@ -110,31 +109,55 @@ Carry out goodness of fit test for the binomial model specified for number of ca
 [20 Marks]
 Solution 4:
 i)
+
+```{r}
 q4<-matrix(c(455,251,309,400,
 458,322,246,426,
 587,292,217,470,
 531,340,120,547),
 ncol=4,nrow=4)
+```
+
+
+```{r}
+q4
+```
+
+```{r}
 n<-ncol(q4)
+n
+```
+
+
+```{r}
 m<-mean(rowMeans(q4))
+m
+```
+
+
+```{r}
 s<-mean(apply(q4,1,var))
+s
+```
+
+
+```{r}
 v<-var(rowMeans(q4)) - mean(apply(q4,1,var))/n
 Z<- n/(n+s/v)
 n
-[1] 4
-m
-[1] 373.1875
-s
-[1] 3967.854
-v
-[1] 16843.22
+```
+
+
 Z
 [1] 0.9443816
 [1+2+2+3+2]
 ii)
 Z*rowMeans(q4[3:4,])+(1-Z)*m
 [1] 231.3532 455.8799
-[3]
+
+
+---
+
 iii)
 Risk Volumes are required to apply EBCT2
 
@@ -142,25 +165,35 @@ Risk Volumes are required to apply EBCT2
 ---
 
 iv)
+
+```{r}
 obs<-c(61,71,15,3)
->
-#Combine 2 and 3 since value of 3 is less than 5
+```
+
+
+* Combine 2 and 3 since value of 3 is less than 5
+
+```{r}
 obs.comb<-c(61,71,15 + 3)
->
+```
+
+
+```{r}
 p<-0.2
 exp<-dbinom(c(0:1),3,p)
 exp[3]<-1-pbinom(1,3,p)
 sum(exp)
-[1] 1
->
+```
+
+
 
 ---
 
-Page 8 of 8
+```{r}
 chisq.test(x=obs.comb,p=exp)
-Chi-squared test for given probabilities
-data: obs.comb
-X-squared = 6.7371, df = 2, p-value = 0.03444
-Since p-value <0.5, we have sufficient evidence to reject the null hypothesis that cancellation follows bin(3,0.2)
+```
+
+
+* Since p-value <0.5, we have sufficient evidence to reject the null hypothesis that cancellation follows bin(3,0.2)
 
 ---
