--- a/00-I2-CS2B-FIA-September-2021/04-I2-Question3-Part-A.Rmd
+++ b/00-I2-CS2B-FIA-September-2021/04-I2-Question3-Part-A.Rmd
@@ -137,12 +137,14 @@ n = 10000
 f1 = vector(length = n) 
 f2 = vector(length = n) 
 ---
+
+### Part B
 (ii) Generate a data frame named ***specimen***, in line with the Actuary’s construction 
 rules, corresponding to the parameter values n = 10,000, a = 0 and b = c = 0.5. 
 Use the R function, <tt>head()</tt>, to display the first six rows of specimen in your 
 answer script. 
 
-
+```{r}
 f = vector(length = n) 
 defprob = vector(length = n) 
 default = vector(length = n) 
@@ -153,6 +155,9 @@ f[i] = a + b * f1[i] + c * f2[i]
 defprob[i] = exp(f[i]) /(1 + exp(f[i])) 
 default[i] = 1 * (U[i, 3] <= defprob[i]) 
 }
+
+```
+
 ---
 OR:
 f1 = -1 *(U[,1] <= 1/3) + 1 * (U[,1] > 2/3) [3]
@@ -177,9 +182,13 @@ head(specimen)
 data.  
 
 (iii)
+
+```{r}
 mean(defprob)
-OR
+# OR
 sum(defprob)/length(defprob)
+
+```
 
  0.4993524 
 The expected probability of customer default is 0.4993524 
